--- a/src/assets/scss/_theme-variables.scss
+++ b/src/assets/scss/_theme-variables.scss
@@ -16,8 +16,8 @@ $breakpoint-xl: 1200px;
   --home-link-color: #d4d4d4;
   --home-link-hover-color:  var(--primary-color);
 
-  --button-color: #E5C3D3;
-  --button-alternate-color: #5C2941;
+  --button-color: #7FB3D5;
+  --button-alternate-color: #1F618D;
 
   --post-link-color: #0F070B;
 
